--- a/05_CV.md
+++ b/05_CV.md
@@ -4,6 +4,44 @@ title: CV
 permalink: /cv/
 ---
 
+/* EXPERIENCIA LABORAL */
+
+#experience {
+}
+#experience:hover {
+   background-color: #EEEEEE;
+}
+#experience .place {
+  font-weight: bold;
+}
+#experience .description {
+}
+#experience .fulldescription {
+    /*color: #808080;*/
+    color: var(--cuandopasaraton);
+    font-style: italic;
+    font-size: 90%;
+}
+
+Experiencia Profesional
+-----------------------
+
+2010 <!--<br> <img class="logo" src="./logos/owl_cv.svg"/>-->
+:   <div id="experience">
+    <span class="place">[OWL (One Way Liver, S.L.)](http://www.owlmetabolomics.com/liver-disease-diagnosis.aspx)</span>,
+    <span class="description">Procesamiento y análisis de datos, Estudios Estadísticos e Investigación Operativa</span>,
+    <span class="fulldescription">Procesamiento y análisis estadístico de datos. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.</span>
+    </div>
+
+2004 - 2010
+:   <div id="experience">
+    <span class="place">[COHS Consultores en Ciencias Humanas, S.L.](http://www.gac.com.es)</span>,
+    <span class="description">Procesamiento y análisis de datos, Estudios Clínicos, Epidemiólogicos y Sociales</span>,
+    <span class="fulldescription">Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.</span>
+    </div>
+
+
+
 Aquí iré dejando notas sobre los diferentes proyectos en los que me suelo meter, siempre relacionados 
 con las Matemáticas y/o Estadística, programación en [R][], desarrollo de funciones, aplicaciones 
 particulares de paquetes de [R][] ya creados, ... y así un largo etcétera de pequeñas ideas a las que 
