--- a/05_CV.md
+++ b/05_CV.md
@@ -2,26 +2,8 @@
 layout: page
 title: CV
 permalink: /cv/
+css: /css/cv.css
 ---
-
-/* EXPERIENCIA LABORAL */
-
-#experience {
-}
-#experience:hover {
-   background-color: #EEEEEE;
-}
-#experience .place {
-  font-weight: bold;
-}
-#experience .description {
-}
-#experience .fulldescription {
-    /*color: #808080;*/
-    color: var(--cuandopasaraton);
-    font-style: italic;
-    font-size: 90%;
-}
 
 Experiencia Profesional
 -----------------------
