--- a/05_CV.md
+++ b/05_CV.md
@@ -5,6 +5,28 @@ permalink: /cv/
 css: /css/cv.css
 ---
 
+<table>
+<tr>
+<td align="center" valign="middle" width="470">
+<span style="font-size:200%; font-weight: bold; color: #000000">Ibon Martínez Arranz</span><br>
+<span style="font-style: italic; font-size:120%; color: #808080">Mathematician & Statistician</span>
+</td>
+<td align="right" valign="top" width="210">
+<span style="color: #009B7D; font-size:95%">Calle Santa Eulalia 45, 10ºD<br>
+48980 Santurtzi (Bizkaia)<br>
+☎ 626015495<br>
+☎ 944838823<br>
+✉ <a href='mailto:ibon.martinez@gmail.com?subject=Contacto a través de curriculum vitae&body=Estimado Ibon,'>ibon.martinez@gmail.com</a></span><br>
+</td>
+<td align="center" valign="top" width="120">
+<div id="imagen">
+<img src="./cvmarkdown/photo/ibon_square.png" width=120 alt="Ibon Martínez-Arranz">
+</div>
+</td>
+</tr>
+</table>
+
+
 Experiencia Profesional
 -----------------------
 
