--- a/05_CV.md
+++ b/05_CV.md
@@ -1,31 +1,19 @@
 ---
 layout: page
-title: CV
+title: CV | Ibon Martínez-Arranz
 permalink: /cv/
-css: /css/cv.css
+css: "./css/cv.css"
 ---
 
-<table>
-<tr>
-<td align="center" valign="middle" width="470">
-<span style="font-size:200%; font-weight: bold; color: #000000">Ibon Martínez Arranz</span><br>
-<span style="font-style: italic; font-size:120%; color: #808080">Mathematician & Statistician</span>
-</td>
-<td align="right" valign="top" width="210">
-<span style="color: #009B7D; font-size:95%">Calle Santa Eulalia 45, 10ºD<br>
-48980 Santurtzi (Bizkaia)<br>
-☎ 626015495<br>
-☎ 944838823<br>
-✉ <a href='mailto:ibon.martinez@gmail.com?subject=Contacto a través de curriculum vitae&body=Estimado Ibon,'>ibon.martinez@gmail.com</a></span><br>
-</td>
-<td align="center" valign="top" width="120">
-<div id="imagen">
-<img src="./cvmarkdown/photo/ibon_square.png" width=120 alt="Ibon Martínez-Arranz">
-</div>
-</td>
-</tr>
-</table>
+Ibon Martínez-Arranz
+Mathematician & Statistician
+☎ 626015495
+☎ 944838823
+ibon.martinez@gmail.com
 
+
+Ibon Martínez-Arranz got his B.Sc. in Mathematics at the University of the Basque Country (EHU/UPV). He joined the Basque Country Health Service in 2004 as a data analyst, being involved also in the 
+Epidemiological report of Renal patients (The Department of Health of the Basque Country Government and Osakidetza)Since his incorporation at OWL in 2010, Ibon is responsible of the data mining and predictive modeling department of the company.
 
 Experiencia Profesional
 -----------------------
@@ -44,6 +32,15 @@ Experiencia Profesional
     <span class="fulldescription">Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.</span>
     </div>
 
+
+Professional Employment
+-----------------------
+
+2010
+:   [OWL (One Way Liver, S.L.)](http://www.owlmetabolomics.com/liver-disease-diagnosis.aspx), Procesamiento y análisis de datos, Estudios Estadísticos e Investigación Operativa, Procesamiento y análisis estadístico de datos. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
+
+2004 - 2010
+:   [COHS Consultores en Ciencias Humanas, S.L.](http://www.gac.com.es), Procesamiento y análisis de datos, Estudios Clínicos, Epidemiólogicos y Sociales, Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
 
 
 Aquí iré dejando notas sobre los diferentes proyectos en los que me suelo meter, siempre relacionados 
