--- a/05_CV.md
+++ b/05_CV.md
@@ -1,15 +1,15 @@
 ---
 layout: page
-title: CV | Ibon Martínez-Arranz
+title: CV
 permalink: /cv/
-css: "./css/cv.css"
+css: "/css/cv.css"
 ---
 
-Ibon Martínez-Arranz
-Mathematician & Statistician
-☎ 626015495
-☎ 944838823
-ibon.martinez@gmail.com
+Ibon Martínez-Arranz  
+Mathematician & Statistician  
+☎ 626015495  
+☎ 944838823  
+ibon.martinez@gmail.com  
 
 
 Ibon Martínez-Arranz got his B.Sc. in Mathematics at the University of the Basque Country (EHU/UPV). He joined the Basque Country Health Service in 2004 as a data analyst, being involved also in the 
