--- a/05_CV.md
+++ b/05_CV.md
@@ -2,7 +2,6 @@
 layout: page
 title: CV
 permalink: /cv/
-css: "/css/cv.css"
 ---
 
 Ibon Martínez-Arranz  
@@ -37,11 +36,15 @@ Professional Employment
 -----------------------
 
 2010
-:   [OWL (One Way Liver, S.L.)](http://www.owlmetabolomics.com/liver-disease-diagnosis.aspx), Procesamiento y análisis de datos, Estudios Estadísticos e Investigación Operativa, Procesamiento y análisis estadístico de datos. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
+: [OWL (One Way Liver, S.L.)](http://www.owlmetabolomics.com/liver-disease-diagnosis.aspx), Procesamiento y análisis de datos, Estudios Estadísticos e Investigación Operativa, Procesamiento y análisis estadístico de datos. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
 
 2004 - 2010
-:   [COHS Consultores en Ciencias Humanas, S.L.](http://www.gac.com.es), Procesamiento y análisis de datos, Estudios Clínicos, Epidemiólogicos y Sociales, Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
+: [COHS Consultores en Ciencias Humanas, S.L.](http://www.gac.com.es), Procesamiento y análisis de datos, Estudios Clínicos, Epidemiólogicos y Sociales, Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
 
+
+term
+: definition
+: another definition
 
 Aquí iré dejando notas sobre los diferentes proyectos en los que me suelo meter, siempre relacionados 
 con las Matemáticas y/o Estadística, programación en [R][], desarrollo de funciones, aplicaciones 
