--- a/05_CV.md
+++ b/05_CV.md
@@ -42,6 +42,15 @@ Professional Employment
 : [COHS Consultores en Ciencias Humanas, S.L.](http://www.gac.com.es), Procesamiento y análisis de datos, Estudios Clínicos, Epidemiólogicos y Sociales, Procesamiento y análisis estadístico de datos. Coordinación de los recursos para la investigación. Colaboración en la elaboración de informes técnicos. Elaboración de la metodología estadística utilizada y justificación.
 
 
+<dl>
+  <dt>term</dt>
+  <dd>
+    <p>definition</p>
+  </dd>
+  <dd>definition</dd>
+</dl>
+
+
 term
 : definition
 : another definition
